--- a/labs/word_difficulty.ipynb
+++ b/labs/word_difficulty.ipynb
@@ -89,6 +89,26 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "transform_word()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -189,42 +209,42 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>наготовить</th>\n",
-       "      <td>0.7</td>\n",
-       "      <td>10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>вильнуть</th>\n",
-       "      <td>2.3</td>\n",
+       "      <th>цепкость</th>\n",
+       "      <td>0.6</td>\n",
        "      <td>8</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>подгореть</th>\n",
-       "      <td>0.9</td>\n",
+       "      <th>идентичный</th>\n",
+       "      <td>5.4</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>туговато</th>\n",
+       "      <td>0.4</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>кокошник</th>\n",
+       "      <td>1.2</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>выработка</th>\n",
+       "      <td>19.9</td>\n",
        "      <td>9</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>поприветствовать</th>\n",
-       "      <td>2.2</td>\n",
-       "      <td>16</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>сумасшествие</th>\n",
-       "      <td>3.4</td>\n",
-       "      <td>12</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                  Freq(ipm)  length\n",
-       "Lemma                              \n",
-       "наготовить              0.7      10\n",
-       "вильнуть                2.3       8\n",
-       "подгореть               0.9       9\n",
-       "поприветствовать        2.2      16\n",
-       "сумасшествие            3.4      12"
+       "            Freq(ipm)  length\n",
+       "Lemma                        \n",
+       "цепкость          0.6       8\n",
+       "идентичный        5.4      10\n",
+       "туговато          0.4       8\n",
+       "кокошник          1.2       8\n",
+       "выработка        19.9       9"
       ]
      },
      "execution_count": 5,
@@ -339,42 +359,42 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>скульптурный</th>\n",
-       "      <td>скульпт/у'р/н/ый</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>выходящий</th>\n",
-       "      <td>вы/ход/я'щ/ий</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>ребятня</th>\n",
-       "      <td>реб/ят/н/я'</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>плебей</th>\n",
-       "      <td>плебе'й/</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>обмундировочный</th>\n",
-       "      <td>обмундир/о'в/оч/н/ый</td>\n",
+       "      <th>автотренажер</th>\n",
+       "      <td>авто/трен/аж/ёр/</td>\n",
        "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>нахватанный</th>\n",
+       "      <td>на/хва'т/а/нн/ый</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>летошний</th>\n",
+       "      <td>ле'т/ош/н/ий</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>расстанавливаться</th>\n",
+       "      <td>рас/стана'вл/ива/ть/ся</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>авиапассажир</th>\n",
+       "      <td>авиа/пассажи'р/</td>\n",
+       "      <td>3</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                             analysis  count_morph\n",
-       "Lemma                                             \n",
-       "скульптурный         скульпт/у'р/н/ый            4\n",
-       "выходящий               вы/ход/я'щ/ий            4\n",
-       "ребятня                   реб/ят/н/я'            4\n",
-       "плебей                       плебе'й/            2\n",
-       "обмундировочный  обмундир/о'в/оч/н/ый            5"
+       "                                 analysis  count_morph\n",
+       "Lemma                                                 \n",
+       "автотренажер             авто/трен/аж/ёр/            5\n",
+       "нахватанный              на/хва'т/а/нн/ый            5\n",
+       "летошний                     ле'т/ош/н/ий            4\n",
+       "расстанавливаться  рас/стана'вл/ива/ть/ся            5\n",
+       "авиапассажир              авиа/пассажи'р/            3"
       ]
      },
      "execution_count": 7,
@@ -1498,7 +1518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1516,7 +1536,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  3%|██▋                                                                          | 1000/28613 [00:10<05:02, 91.39it/s]\n"
+      "  3%|██▋                                                                         | 1000/28613 [00:07<03:28, 132.72it/s]\n"
      ]
     },
     {
@@ -1727,7 +1747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1761,15 +1781,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|████████████████████████████████████████████████████████████████████████████████| 964/964 [00:13<00:00, 69.32it/s]\n",
-      "100%|██████████████████████████████████████████████████████████████████████████████| 1463/1463 [00:21<00:00, 67.55it/s]\n"
+      "100%|████████████████████████████████████████████████████████████████████████████████| 964/964 [00:10<00:00, 92.74it/s]\n",
+      "100%|██████████████████████████████████████████████████████████████████████████████| 1463/1463 [00:17<00:00, 84.09it/s]\n"
      ]
     },
     {
@@ -1807,7 +1827,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
