--- a/labs/word_difficulty.ipynb
+++ b/labs/word_difficulty.ipynb
@@ -77,35 +77,16 @@
     "import pymorphy2\n",
     "morph = pymorphy2.MorphAnalyzer()\n",
     "\n",
-    "def transform_word(word: str) -> str:\n",
+    "def transform_word(word: str) -> tuple:\n",
     "    delete_symbols = set(string.punctuation) - set('-') | set('«»…')\n",
-    "    word = ''.join([w for w in word.lower().replace(' ', '') if w not in delete_symbols])\n",
+    "    word = ''.join([w for w in word.replace(' ', '') if w not in delete_symbols])\n",
     "    word = re.sub('[a-zA-Z]|\\d', '', word)\n",
-    "    return word\n",
+    "    is_capitalized = word[0].isupper() if word else False\n",
+    "    return word.lower(), is_capitalized\n",
     "\n",
     "def get_word_info(word: str) -> tuple: \n",
     "    morph_parse = morph.parse(word)[0]\n",
     "    return word, morph_parse.normal_form, morph_parse.tag.POS "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 34,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "transform_word()"
    ]
   },
   {
@@ -124,14 +105,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "('танцующая', False)\n",
+      "('что-нибудь', True)\n",
       "('танцующая', 'танцующий', 'ADJF')\n",
       "('что-нибудь', 'что-нибудь', 'NPRO')\n"
      ]
     }
    ],
    "source": [
-    "print(get_word_info(word=transform_word(word='танцующая')))\n",
-    "print(get_word_info(word=transform_word(word='  \"ЧтО-НибУ1д Ь\" ')))"
+    "print(transform_word(word='танцующая'))\n",
+    "print(transform_word(word='  \"ЧтО-НибУ1д Ь\" '))\n",
+    "\n",
+    "print(get_word_info(word=transform_word(word='танцующая')[0]))\n",
+    "print(get_word_info(word=transform_word(word='  \"ЧтО-НибУ1д Ь\" ')[0]))"
    ]
   },
   {
@@ -209,42 +195,42 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>цепкость</th>\n",
-       "      <td>0.6</td>\n",
-       "      <td>8</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>идентичный</th>\n",
-       "      <td>5.4</td>\n",
-       "      <td>10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>туговато</th>\n",
+       "      <th>сподвигнуть</th>\n",
        "      <td>0.4</td>\n",
-       "      <td>8</td>\n",
+       "      <td>11</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>кокошник</th>\n",
-       "      <td>1.2</td>\n",
-       "      <td>8</td>\n",
+       "      <th>юннат</th>\n",
+       "      <td>0.7</td>\n",
+       "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>выработка</th>\n",
-       "      <td>19.9</td>\n",
-       "      <td>9</td>\n",
+       "      <th>семидесятилетие</th>\n",
+       "      <td>1.3</td>\n",
+       "      <td>15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>полумиллионный</th>\n",
+       "      <td>0.4</td>\n",
+       "      <td>14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>пестролистный</th>\n",
+       "      <td>0.4</td>\n",
+       "      <td>13</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "            Freq(ipm)  length\n",
-       "Lemma                        \n",
-       "цепкость          0.6       8\n",
-       "идентичный        5.4      10\n",
-       "туговато          0.4       8\n",
-       "кокошник          1.2       8\n",
-       "выработка        19.9       9"
+       "                 Freq(ipm)  length\n",
+       "Lemma                             \n",
+       "сподвигнуть            0.4      11\n",
+       "юннат                  0.7       5\n",
+       "семидесятилетие        1.3      15\n",
+       "полумиллионный         0.4      14\n",
+       "пестролистный          0.4      13"
       ]
      },
      "execution_count": 5,
@@ -359,28 +345,28 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>автотренажер</th>\n",
-       "      <td>авто/трен/аж/ёр/</td>\n",
-       "      <td>5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>нахватанный</th>\n",
-       "      <td>на/хва'т/а/нн/ый</td>\n",
-       "      <td>5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>летошний</th>\n",
-       "      <td>ле'т/ош/н/ий</td>\n",
+       "      <th>сселить</th>\n",
+       "      <td>с/сел/и'/ть</td>\n",
        "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>расстанавливаться</th>\n",
-       "      <td>рас/стана'вл/ива/ть/ся</td>\n",
+       "      <th>приверчивать</th>\n",
+       "      <td>при/ве'рч/ива/ть</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>вольтижировка</th>\n",
+       "      <td>вольтиж/ир/о'в/к/а</td>\n",
        "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>авиапассажир</th>\n",
-       "      <td>авиа/пассажи'р/</td>\n",
+       "      <th>малоудачный</th>\n",
+       "      <td>мал/о/уда'/ч/н/ый</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>пригрести</th>\n",
+       "      <td>при/грес/ти'</td>\n",
        "      <td>3</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -388,13 +374,13 @@
        "</div>"
       ],
       "text/plain": [
-       "                                 analysis  count_morph\n",
-       "Lemma                                                 \n",
-       "автотренажер             авто/трен/аж/ёр/            5\n",
-       "нахватанный              на/хва'т/а/нн/ый            5\n",
-       "летошний                     ле'т/ош/н/ий            4\n",
-       "расстанавливаться  рас/стана'вл/ива/ть/ся            5\n",
-       "авиапассажир              авиа/пассажи'р/            3"
+       "                         analysis  count_morph\n",
+       "Lemma                                         \n",
+       "сселить               с/сел/и'/ть            4\n",
+       "приверчивать     при/ве'рч/ива/ть            4\n",
+       "вольтижировка  вольтиж/ир/о'в/к/а            5\n",
+       "малоудачный     мал/о/уда'/ч/н/ый            6\n",
+       "пригрести            при/грес/ти'            3"
       ]
      },
      "execution_count": 7,
@@ -1494,7 +1480,7 @@
     "    text_df = pd.DataFrame(columns=['lemma', 'difficulty'])\n",
     "    with open(filepath, 'rb') as f:\n",
     "        for i, word in enumerate(tqdm(f.read().decode('utf-8').split())):\n",
-    "            word = transform_word(word)\n",
+    "            word = transform_word(word)[0]\n",
     "            if word and (not unique or word not in text_df.index):\n",
     "                difficulty = word_difficulty(word)\n",
     "                info = {'lemma': difficulty['lemma'],\n",
@@ -1536,7 +1522,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  3%|██▋                                                                         | 1000/28613 [00:07<03:28, 132.72it/s]\n"
+      "  3%|██▋                                                                         | 1000/28613 [00:07<03:17, 140.15it/s]\n"
      ]
     },
     {
@@ -1788,8 +1774,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|████████████████████████████████████████████████████████████████████████████████| 964/964 [00:10<00:00, 92.74it/s]\n",
-      "100%|██████████████████████████████████████████████████████████████████████████████| 1463/1463 [00:17<00:00, 84.09it/s]\n"
+      "100%|████████████████████████████████████████████████████████████████████████████████| 964/964 [00:13<00:00, 70.86it/s]\n",
+      "100%|██████████████████████████████████████████████████████████████████████████████| 1463/1463 [00:17<00:00, 84.26it/s]\n"
      ]
     },
     {
@@ -1937,11 +1923,12 @@
     "\n",
     "\n",
     "# Вспомогательные функции\n",
-    "def transform_word(word: str) -> str:\n",
+    "def transform_word(word: str) -> tuple:\n",
     "    delete_symbols = set(string.punctuation) - set('-') | set('«»…')\n",
-    "    word = ''.join([w for w in word.lower().replace(' ', '') if w not in delete_symbols])\n",
+    "    word = ''.join([w for w in word.replace(' ', '') if w not in delete_symbols])\n",
     "    word = re.sub('[a-zA-Z]|\\d', '', word)\n",
-    "    return word\n",
+    "    is_capitalized = word[0].isupper() if word else False\n",
+    "    return word.lower(), is_capitalized\n",
     "\n",
     "def get_word_info(word: str) -> tuple: \n",
     "    morph_parse = morph.parse(word)[0]\n",
@@ -2145,7 +2132,7 @@
     "    text_df = pd.DataFrame(columns=['lemma', 'difficulty'])\n",
     "    with open(filepath, 'rb') as f:\n",
     "        for i, word in enumerate(tqdm(f.read().decode('utf-8').split())):\n",
-    "            word = transform_word(word)\n",
+    "            word = transform_word(word)[0]\n",
     "            if word and (not unique or word not in text_df.index):\n",
     "                difficulty = word_difficulty(word)\n",
     "                info = {'lemma': difficulty['lemma'],\n",
