--- a/labs/word_difficulty.ipynb
+++ b/labs/word_difficulty.ipynb
@@ -139,6 +139,22 @@
   {
    "cell_type": "code",
    "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def save_zip_csv(url: str, dirname: str, new_filename: str) -> None:\n",
+    "    fullname = os.path.join(dirname, new_filename)\n",
+    "    \n",
+    "    if not os.path.exists(fullname):\n",
+    "        r = requests.get(url)\n",
+    "        with r, zipfile.ZipFile(io.BytesIO(r.content)) as archive:\n",
+    "            archive.extractall(dirname)\n",
+    "    return fullname"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -195,28 +211,28 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>скорость</th>\n",
-       "      <td>105.2</td>\n",
-       "      <td>8</td>\n",
+       "      <th>ненавидеть</th>\n",
+       "      <td>44.1</td>\n",
+       "      <td>10</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>косовский</th>\n",
-       "      <td>1.5</td>\n",
-       "      <td>9</td>\n",
+       "      <th>человечность</th>\n",
+       "      <td>4.4</td>\n",
+       "      <td>12</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>поредеть</th>\n",
-       "      <td>2.8</td>\n",
-       "      <td>8</td>\n",
+       "      <th>спровадить</th>\n",
+       "      <td>1.1</td>\n",
+       "      <td>10</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>барбекю</th>\n",
-       "      <td>1.2</td>\n",
-       "      <td>7</td>\n",
+       "      <th>поднапрячься</th>\n",
+       "      <td>0.4</td>\n",
+       "      <td>12</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>солонка</th>\n",
-       "      <td>1.0</td>\n",
+       "      <th>химичка</th>\n",
+       "      <td>0.4</td>\n",
        "      <td>7</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -224,28 +240,24 @@
        "</div>"
       ],
       "text/plain": [
-       "           Freq(ipm)  length\n",
-       "Lemma                       \n",
-       "скорость       105.2       8\n",
-       "косовский        1.5       9\n",
-       "поредеть         2.8       8\n",
-       "барбекю          1.2       7\n",
-       "солонка          1.0       7"
+       "              Freq(ipm)  length\n",
+       "Lemma                          \n",
+       "ненавидеть         44.1      10\n",
+       "человечность        4.4      12\n",
+       "спровадить          1.1      10\n",
+       "поднапрячься        0.4      12\n",
+       "химичка             0.4       7"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dirname = 'datasets/freq'\n",
-    "name = 'freqrnc2011.csv'\n",
-    "fullname = os.path.join(dirname, name)\n",
-    "if not os.path.exists(fullname):\n",
-    "    r = requests.get('http://dict.ruslang.ru/Freq2011.zip')\n",
-    "    with r, zipfile.ZipFile(io.BytesIO(r.content)) as archive:\n",
-    "        archive.extractall(dirname)\n",
+    "fullname = save_zip_csv(url='http://dict.ruslang.ru/Freq2011.zip',\n",
+    "                        dirname='datasets/freq',\n",
+    "                        new_filename='freqrnc2011.csv')\n",
     "\n",
     "freq_df = pd.read_csv(fullname, sep='\\t')[['Lemma', 'Freq(ipm)']]\n",
     "freq_df['Lemma'] = freq_df['Lemma'].str.lower()\n",
@@ -268,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "scrolled": false
    },
@@ -345,28 +357,28 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>вертикальный</th>\n",
-       "      <td>вертика'ль/н/ый</td>\n",
+       "      <th>шпунтина</th>\n",
+       "      <td>шпунт/и'н/а</td>\n",
        "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>тесовый</th>\n",
-       "      <td>тес/о'в/ый</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>абазинец</th>\n",
-       "      <td>абази'н/ец/</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>косонаправленный</th>\n",
-       "      <td>кос/о/напра'вл/енн/ый</td>\n",
+       "      <th>склеиться</th>\n",
+       "      <td>с/кле'/и/ть/ся</td>\n",
        "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>подменщик</th>\n",
-       "      <td>под/ме'н/щик/</td>\n",
+       "      <th>ссаженный</th>\n",
+       "      <td>с/са'ж/енн/ый</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ловиться</th>\n",
+       "      <td>лов/и'/ть/ся</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>поэтизация</th>\n",
+       "      <td>поэт/из/а'ци/я</td>\n",
        "      <td>4</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -374,16 +386,16 @@
        "</div>"
       ],
       "text/plain": [
-       "                               analysis  count_morph\n",
-       "Lemma                                               \n",
-       "вертикальный            вертика'ль/н/ый            3\n",
-       "тесовый                      тес/о'в/ый            3\n",
-       "абазинец                    абази'н/ец/            3\n",
-       "косонаправленный  кос/о/напра'вл/енн/ый            5\n",
-       "подменщик                 под/ме'н/щик/            4"
+       "                  analysis  count_morph\n",
+       "Lemma                                  \n",
+       "шпунтина       шпунт/и'н/а            3\n",
+       "склеиться   с/кле'/и/ть/ся            5\n",
+       "ссаженный    с/са'ж/енн/ый            4\n",
+       "ловиться      лов/и'/ть/ся            4\n",
+       "поэтизация  поэт/из/а'ци/я            4"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -422,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -569,7 +581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -613,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -659,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -681,7 +693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -722,7 +734,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -770,7 +782,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {
     "id": "5U0SMw-vXenP"
    },
@@ -793,7 +805,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -847,7 +859,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -879,7 +891,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {
     "id": "R3VZvwPR7Msq"
    },
@@ -911,7 +923,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1005,7 +1017,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {
     "id": "sWzOCZJx65rZ"
    },
@@ -1032,7 +1044,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -1104,7 +1116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {
     "id": "3zHykdhKrLMG"
    },
@@ -1133,7 +1145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -1179,7 +1191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1225,7 +1237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1250,7 +1262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1293,7 +1305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1317,7 +1329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1426,7 +1438,7 @@
        "знакочередующийся                   1.0             None                 1.0  "
       ]
      },
-     "execution_count": 27,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1459,7 +1471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1504,7 +1516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1515,14 +1527,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  3%|██▋                                                                         | 1000/28613 [00:03<01:47, 256.33it/s]\n"
+      "  3%|██▋                                                                          | 1000/28613 [00:10<04:38, 99.24it/s]\n"
      ]
     },
     {
@@ -1712,7 +1724,7 @@
        "[630 rows x 6 columns]"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1733,7 +1745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1767,15 +1779,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|███████████████████████████████████████████████████████████████████████████████| 964/964 [00:06<00:00, 155.08it/s]\n",
-      "100%|█████████████████████████████████████████████████████████████████████████████| 1463/1463 [00:10<00:00, 140.68it/s]\n"
+      "100%|████████████████████████████████████████████████████████████████████████████████| 964/964 [00:10<00:00, 93.58it/s]\n",
+      "100%|██████████████████████████████████████████████████████████████████████████████| 1463/1463 [00:16<00:00, 90.72it/s]\n"
      ]
     },
     {
@@ -1813,7 +1825,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1857,6 +1869,15 @@
     "\n",
     "\n",
     "# Датасеты\n",
+    "def save_zip_csv(url: str, dirname: str, new_filename: str) -> None:\n",
+    "    fullname = os.path.join(dirname, new_filename)\n",
+    "    \n",
+    "    if not os.path.exists(fullname):\n",
+    "        r = requests.get(url)\n",
+    "        with r, zipfile.ZipFile(io.BytesIO(r.content)) as archive:\n",
+    "            archive.extractall(dirname)\n",
+    "    return fullname\n",
+    "\n",
     "def save_zip_txt(url: str, dirname: str, new_filename: str) -> None:\n",
     "    fullname = os.path.join(dirname, new_filename)\n",
     "    \n",
@@ -1895,13 +1916,9 @@
     "a1_level_path = save_words(level='a1')\n",
     "c1_level_path = save_words(level='c1')\n",
     "\n",
-    "dirname = 'datasets/freq'\n",
-    "name = 'freqrnc2011.csv'\n",
-    "fullname = os.path.join(dirname, name)\n",
-    "if not os.path.exists(fullname):\n",
-    "    r = requests.get('http://dict.ruslang.ru/Freq2011.zip')\n",
-    "    with r, zipfile.ZipFile(io.BytesIO(r.content)) as archive:\n",
-    "        archive.extractall(dirname)\n",
+    "fullname = save_zip_csv(url='http://dict.ruslang.ru/Freq2011.zip',\n",
+    "                        dirname='datasets/freq',\n",
+    "                        new_filename='freqrnc2011.csv')\n",
     "freq_df = pd.read_csv(fullname, sep='\\t')[['Lemma', 'Freq(ipm)']]\n",
     "freq_df['Lemma'] = freq_df['Lemma'].str.lower()\n",
     "freq_df['length'] = freq_df['Lemma'].str.len()\n",
